add hyperliquid support + bugfixes
- hyperliquid crosschain deposits
- hyperCore deposits and actions
- add unit tests
- authentication bug fixes
